<resources>
    <string name="app_name">AndroidTestApplication</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="your_username">Your Username</string>
    <string name="login_txt">Login</string>
    <string name="your_password">Your password</string>
    <string name="forgot">Forgot?</string>
    <string name="loading_btn">loading_anim_btn.json</string>
    <string name="username_empty">Username must not be empty</string>
    <string name="password_empty">Password must not be empty</string>
    <string name="calendar_txt">Calendar</string>
    <string name="dashboard_txt">Dashboard</string>
    <string name="sync_txt">Sync</string>
    <string name="new_ticket">New Ticket</string>
    <string name="menu_txt">Menu</string>
    <string name="added_successfuly">Ticket Added!</string>
    <string name="something_went_wrong">Oops something went wrong</string>
    <string name="select_date">Select date</string>
    <string name="select_this_date">SELECT</string>
    <string name="all_tickets">All tickets</string>
    <string name="permission_calendar_rationale">We need calendar permissions to use sync function</string>
    <string name="loading_json">loading_anim.json</string>
    <string name="loading_info">Loading, pelase wait</string>
    <string name="loading_success_json">success.json</string>
    <string name="loading_error_json">error.json</string>
    <string name="success_sync">Calendar synced correctly, %s events configured</string>
    <string name="customer_name_hint">Customer name</string>
    <string name="add_ticket">Add Ticket</string>
    <string name="customer_address_hint">Customer address</string>
    <string name="customer_empty">Customer name must not be empty</string>
    <string name="address_empty">Customer address must not be empty</string>
    <string name="close_">Close</string>
    <string name="save_ticket">Save</string>
    <string name="work_ticket_txt">Work Ticket</string>
    <string name="customer_info">Customer Info:</string>
    <string name="schedulefor">Schedule For:</string>
    <string name="address_job">Job Site Address:</string>
    <string name="distance_to">Distance:</string>
    <string name="get_directions">Get Directions</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In consectetur fringilla diam porta pulvinar. Vivamus at sodales ex. Vivamus consectetur lacus ut commodo pellentesque. Morbi gravida aliquet porttitor. Mauris sed urna diam. Etiam at faucibus magna. Nullam vitae justo sed diam facilisis sollicitudin. Donec vel mollis dui. Duis facilisis, sem ac tincidunt accumsan, ante sapien condimentum sapien, sed tempus risus dui eu enim. Integer vitae augue id enim auctor accumsan ut non nulla. Integer eu imperdiet arcu. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec semper suscipit sagittis. Vestibulum sit amet mattis nunc, vitae malesuada dui. Curabitur eleifend orci diam, vel ornare elit pretium vel.</string>
    <string name="dispatch_notes">Dispatch Note:</string>
    <string name="dept_class">Dept. Class:</string>
    <string name="service_type">Service Type:</string>
    <string name="overview">Overview</string>
    <string name="work_details">Work Details</string>
    <string name="purchasing">Purchasing</string>
    <string name="finishing_up">Finishing up</string>
    <string name="ticket_saved">Ticket saved successfully</string>
    <string name="save_changes">Save changes</string>
    <string name="reason_call">Reason for Call:</string>
    <string name="reasons_">- Customer has noticed extremely low water pressure from the sink\n- Precession Tune up\n- Estimate for panel upgrade</string>
    <string name="menu_json">menu_anim.json</string>
    <string name="ticket_txt">Ticket</string>
    <string name="empty_tickets">There are no tickets to open the calendar</string>
    <string name="permission_map_rationale">To use Get Directions we need map permissions</string>
    <string name="search_address">Search address here</string>
    <string name="gmapSdk">GMap SDK</string>
    <string name="web_selection">WebView Map</string>
    <string name="select_type_map">Select map type</string>
    <string name="empty_tickets_list">Empty ticket list</string>
    <string name="empty_tickets_sync">There are no tickets to sync in calendar</string>
    <string name="select_time_and_date"><![CDATA[Select Date & Time]]></string>
    <string name="customer_phone_hint">Customer phone</string>
    <string name="subtitle_hint">Ticket subtitle</string>
    <string name="notes_hint">My notes</string>
    <string name="phone_empty">Customer phone must not be empty</string>
    <string name="date_empty">Ticket date must not be empty</string>
    <string name="edit_ticket">Edit ticket #%s</string>
    <string name="edit_ticket_txt">Edit Ticket</string>
    <string name="delete_ticket">Delete Ticket</string>
    <string name="ticket_deleted">Ticket was deleted</string>
    <string name="literal_date">Date</string>
</resources>