<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:paddingStart="@dimen/padding_horizontal_screencontent"
        android:paddingEnd="@dimen/padding_horizontal_screencontent"
        android:layout_marginBottom="@dimen/margin_vertical_add_ticket"
        android:orientation="vertical"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titlePopUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_txt_button"
                android:text="@string/add_ticket"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size_titles"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtCustomerName"
                style="@style/Theme.InputTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/user"
                app:startIconTint="@color/medium_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/customer_name_hint"
                    android:inputType="textPersonName"
                    android:maxLength="50"
                    android:ellipsize="end"
                    android:textSize="@dimen/font_size_login" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtSubtitle"
                style="@style/Theme.InputTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_vertical_add_ticket"
                app:startIconDrawable="@drawable/subtitle_input"
                app:startIconTint="@color/medium_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/subtitle_hint"
                    android:inputType="text"
                    android:ellipsize="end"
                    android:maxLength="50"
                    android:textSize="@dimen/font_size_login" />
            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_vertical_add_ticket"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/txtCustomerPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconTint="@color/medium_gray"
                app:startIconDrawable="@drawable/phone_input"
                style="@style/Theme.InputTheme"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/customer_phone_hint"
                    android:inputType="phone"
                    android:ellipsize="end"
                    android:maxLength="30"
                    android:textSize="@dimen/font_size_login" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/margin_vertical_add_ticket"
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconTint="@color/medium_gray"
                app:startIconDrawable="@drawable/calendar_input"
                style="@style/Theme.InputTheme"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_time_and_date"
                    android:inputType="text"
                    android:maxLength="50"
                    android:ellipsize="end"
                    android:textSize="@dimen/font_size_login" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_vertical_add_ticket"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/txtCustomerAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconTint="@color/medium_gray"
                app:startIconDrawable="@drawable/address"
                style="@style/Theme.InputTheme"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/customer_address_hint"
                    android:inputType="textPostalAddress"
                    android:ellipsize="end"
                    android:maxLength="100"
                    android:textSize="@dimen/font_size_login" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/margin_vertical_add_ticket"
                android:id="@+id/txtNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconTint="@color/medium_gray"
                app:startIconDrawable="@drawable/notes_input"
                style="@style/Theme.InputTheme"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/notes_hint"
                    android:inputType="text"
                    android:maxLength="80"
                    android:ellipsize="end"
                    android:textSize="@dimen/font_size_login" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_vertical_add_ticket"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_marginEnd="@dimen/margin_horizontal_customer"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/primary"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/padding_txt_button"
                    android:text="@string/save_ticket"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_login"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txt_close"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/padding_txt_button"
                android:text="@string/close_"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_login"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>